@@ -1,4 +1,4 @@
-/* Copyright (C) 1995, 96, 97, 98, 99, 2000 Free Software Foundation, Inc.
+/* Copyright (C) 1995,96,97,98,99,2000,2002 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -50,7 +50,7 @@ ENTRY (__mmap)
 	movl $SYS_ify(mmap2), %eax	/* System call number in %eax.  */
 
 	/* Do the system call trap.  */
-	int $0x80
+	ENTER_KERNEL
 L(skip):
 	/* Restore registers.  */
 	popl %edi
